<resources>
    <string name="app_name">Tree saver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--Menu item strings-->
    <string name="carbon_emission_data">Carbon emission data</string>
    <string name="tips">Tips</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="could_not_sign_in_please_try_again">Could not sign in, please try again.</string>
    <string name="request_id_token">188556730804-ekgdvt06hq47u25f2si73ceaf7lrtbr3.apps.googleusercontent.com</string>
    <string name="com_google">com.google</string>
    <string name="km_saved">Kilometer saved: </string>
    <string name="km_saved_km">%s Km.</string>
    <string name="emission_reduced">Carbon emission reduced: </string>
    <string name="emission_reduced_kg">%s Kg.</string>
    <string name="no_of_trees_saved_today">Number of trees saved today: </string>
    <string name="km_left_to_earn_next_tree">Distance left to earn next tree: </string>


    <string name="action_settings">Settings</string>
</resources>
